--- a/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
+++ b/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.DeLivre">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="DeLivre.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.DeLivre" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+	<application android:label="Meu Delivery" android:icon="@drawable/icon"></application>
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
