--- a/DeLivre/DeLivre/DeLivre.csproj
+++ b/DeLivre/DeLivre/DeLivre.csproj
@@ -10,26 +10,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="DataBase\Estabelecimentos.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="DataBase\Estabelecimentos.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="DevsDNA.XFParallax" Version="1.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.168" />
-    <PackageReference Include="System.Net.Http" Version="4.3.2" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.1" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="3.6.0.220655" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\Cardapio_Menu.xaml.cs">
-      <DependentUpon>Cardapio_Menu.xaml</DependentUpon>
+    <Compile Update="Views\Detalhe\Frios.xaml.cs">
+      <DependentUpon>Frios.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Detalhe\Doces.xaml.cs">
+      <DependentUpon>Doces.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Detalhe\Refrigerante.xaml.cs">
+      <DependentUpon>Refrigerante.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Detalhe\Pizza.xaml.cs">
+      <DependentUpon>Pizza.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Pedido.xaml.cs">
       <DependentUpon>Pedido.xaml</DependentUpon>
@@ -43,10 +45,13 @@
     <EmbeddedResource Update="View1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Cardapio_Menu.xaml">
+    <EmbeddedResource Update="Views\Detalhe\AcaiNormal.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Detalhes.xaml">
+    <EmbeddedResource Update="Views\Detalhe\Detalhes.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Info.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Pedido.xaml">
