Ajustes no Design do app

--- a/DeLivre/DeLivre/DeLivre.csproj
+++ b/DeLivre/DeLivre/DeLivre.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Com.OneSignal" Version="3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.168" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
