--- a/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
+++ b/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.0" android:versionCode="10">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />  
-	<application android:label="Meu Delivery" android:icon="@drawable/icon">  
-  </application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.1" android:versionCode="11">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+	<permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" />
+	<application android:label="Meu Delivery" android:icon="@drawable/icon">
+		<receiver android:name="com.onesignal.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<category android:name="com.lurasoft.AppMeuDelivery" />
+			</intent-filter>
+		</receiver>
+	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
