Ajuste no Layout dos Estabelecimentos!

--- a/DeLivre/DeLivre.Android/DeLivre.Android.csproj
+++ b/DeLivre/DeLivre.Android/DeLivre.Android.csproj
@@ -198,6 +198,9 @@
     <AndroidResource Include="Resources\drawable\ImagemSplash.png" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fundoappNormal.png" />
+  </ItemGroup>
+  <ItemGroup>
     <AndroidResource Include="Resources\drawable\fundoapp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
