aviso e melhorias Pedidos

--- a/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
+++ b/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.3" android:versionCode="13">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.6" android:versionCode="16">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<uses-permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" />
-	<application android:label="Meu Delivery" android:icon="@drawable/icon">
+	<application android:label="Meu Delivery" android:icon="@drawable/icon" android:hardwareAccelerated="true" android:largeHeap="true">
 		<receiver android:name="com.onesignal.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
 				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
