--- a/DeLivre/DeLivre.Android/DeLivre.Android.csproj
+++ b/DeLivre/DeLivre.Android/DeLivre.Android.csproj
@@ -37,7 +37,7 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
-    <AndroidSupportedAbis />
+    <AndroidSupportedAbis>armeabi-v7a;x86_64</AndroidSupportedAbis>
     <JavaMaximumHeapSize>1g</JavaMaximumHeapSize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -65,6 +65,9 @@
   <ItemGroup>
     <PackageReference Include="Com.OneSignal">
       <Version>3.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView">
+      <Version>2.0.9</Version>
     </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.0.0</Version>
@@ -95,6 +98,9 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Forms.InputKit">
       <Version>3.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.PancakeView">
+      <Version>1.0.20</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>3.6.0.220655</Version>
