--- a/DeLivre/DeLivre/DeLivre.csproj
+++ b/DeLivre/DeLivre/DeLivre.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Com.OneSignal" Version="3.0.1" />
+    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.9" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.168" />
@@ -19,6 +20,7 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.1" />
+    <PackageReference Include="Xamarin.Forms.PancakeView" Version="1.0.20" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="3.6.0.220655" />
   </ItemGroup>
 
@@ -57,6 +59,12 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Info.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Local.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MenuCardapio.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Pedido.xaml">
