--- a/DeLivre/DeLivre/DeLivre.csproj
+++ b/DeLivre/DeLivre/DeLivre.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Com.OneSignal" Version="3.0.1" />
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.9" />
+    <PackageReference Include="ExpandableView" Version="1.0.5" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.168" />
@@ -19,7 +20,7 @@
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
-    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.1" />
+    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.5" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="1.0.20" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="3.6.0.220655" />
   </ItemGroup>
@@ -59,9 +60,6 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Info.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\Local.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MenuCardapio.xaml">
