--- a/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
+++ b/DeLivre/DeLivre.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.9" android:versionCode="19">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.lurasoft.AppMeuDelivery" android:installLocation="auto" android:versionName="1.9.1" android:versionCode="20">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<uses-permission android:name="com.lurasoft.AppMeuDelivery.permission.C2D_MESSAGE" />
@@ -12,4 +12,9 @@
 		</receiver>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-feature android:name="android.hardware.location" android:required="false" />
+	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 </manifest>
