--- a/DeLivre/DeLivre/DeLivre.csproj
+++ b/DeLivre/DeLivre/DeLivre.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
     <PackageReference Include="Xamarin.Forms.InputKit" Version="3.0.5" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="1.0.20" />
@@ -26,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\Alertas\Localizacao.xaml.cs">
+      <DependentUpon>Localizacao.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Detalhe\Frios.xaml.cs">
       <DependentUpon>Frios.xaml</DependentUpon>
     </Compile>
