--- a/DeLivre/DeLivre.Android/DeLivre.Android.csproj
+++ b/DeLivre/DeLivre.Android/DeLivre.Android.csproj
@@ -152,7 +152,6 @@
   <ItemGroup>
     <Folder Include="Resources\drawable-hdpi\" />
     <Folder Include="Resources\drawable-xhdpi\" />
-    <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
@@ -213,10 +212,10 @@
     <AndroidResource Include="Resources\drawable\ic_Tipo.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\fundoapp.jpg" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\fundoapp.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ImagemSplash.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ImagemSplash.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
